@@ -1,3 +1,6 @@
+2016-09-16  Kirit Saelensminde  <kirit@felspar.com>
+ Remove direct calls to `boost::spirit::parse` due to threading problems.
+
 2016-09-10  Kirit Saelensminde  <kirit@felspar.com>
  *Initial version of new splitter API that uses views to cut down on memory allocations.
  * Add additional APIs for `utf::u8_view`
